--- a/modules/tfjs-models/package.json
+++ b/modules/tfjs-models/package.json
@@ -19,5 +19,8 @@
     "typescript": "~3.5.1",
     "yalc": "~1.0.0-pre.21"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "safer-eval": "^1.3.5"
+  }
 }
